--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,13 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
+@import './header-hero';
+@import './products';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './customer-reviews';
+@import './contacts';
+@import './footer';
+
 @import './example';
