--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,5 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
-@import './example';
+@import './variables/example';
+@import './variables/variables';
