szkielet headera i hamburger menu

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,1 +1,26 @@
-header-hero<br>
+<header class="hero-header">
+    <section class="hero-header__top header-top">
+        <div class="header-top__logo">
+
+        </div>
+        <div class="menu-mobile"></div>
+        <ul class="menu">
+            <li><a class="menuItem" href="#">Home</a></li>
+            <li><a class="menuItem" href="#">Profile</a></li>
+            <li><a class="menuItem" href="#">About</a></li>
+            <li><a class="menuItem" href="#">Contacts</a></li>
+        </ul>
+        <button class="hamburger">
+            <!-- material icons https://material.io/resources/icons/ -->
+            <i class="menuIcon material-icons">menu</i>
+            <i class="closeIcon material-icons">close</i>
+        </button>
+
+    </section>
+    <section class="hero-header__topic">
+
+    </section>
+    <section class="hero-header__buttons">
+
+    </section>
+</header>
