hamburger, zdjecia i napis

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,26 +1,28 @@
 <header class="hero-header">
     <section class="hero-header__top header-top">
-        <div class="header-top__logo">
+        <div class="header-top__logo"><img  class=header-top__img src="../src/images/logo 1.png"></div>
 
-        </div>
-        <div class="menu-mobile"></div>
-        <ul class="menu">
-            <li><a class="menuItem" href="#">Home</a></li>
-            <li><a class="menuItem" href="#">Profile</a></li>
-            <li><a class="menuItem" href="#">About</a></li>
-            <li><a class="menuItem" href="#">Contacts</a></li>
-        </ul>
-        <button class="hamburger">
-            <!-- material icons https://material.io/resources/icons/ -->
-            <i class="menuIcon material-icons">menu</i>
-            <i class="closeIcon material-icons">close</i>
-        </button>
+<div class="nav-container" tabindex="0">
+    <div class="nav-toggle"></div>
+
+    <div class="nav-items">
+        <button><a href="" class="">Buy now &gt;</a></button>
+        <li class="nav-item"><a  href="#">Home</a></li>
+        <li class="nav-item"><a  href="#">About us</a></li>
+        <li class="nav-item"><a  href="#">How it's made?</a></li>
+        <li class="nav-item"><a href="#">Our products</a></li>
+        <li class="nav-item"><a href="#">Contact</a></li>
+    </div>
+</div>
+
 
     </section>
-    <section class="hero-header__topic">
-
+    <section class="hero-header__topic header-topic">
+<p class="header-topic__p">ICE CREAM <p class="header-topic__p">MADE WITH</p></p>
+<span class="header-topic__span">PASSION</span>
     </section>
     <section class="hero-header__buttons">
 
     </section>
+<div class="hero-header__icecream"><img class=header-bottom__img src="../src/images/lód-header.png"></div>
 </header>
