--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -39,6 +39,121 @@ ol {
   }
 }
 
+.hero-header {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--product-pink);
+  height: 502px;
+  width: 100%;
+}
+
+.header-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-top__logo {
+  width: 199px;
+  height: 50px;
+  padding-left: 20px;
+  padding-top: 6px;
+}
+
+.hero-header__icecream {
+  position: relative;
+}
+
+.header-bottom__img {
+  width: 171px;
+  height: 410px;
+  position: absolute;
+  top: -37px;
+  left: 35%;
+  z-index: 900;
+}
+
+.header-topic__p {
+  color: white;
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 29.77px;
+  letter-spacing: 4%;
+}
+
+.nav-container {
+  display: inline-block;
+  max-width: 30px;
+  max-height: 30px;
+  overflow: visible;
+  outline: none;
+}
+.nav-container.is-active .nav-toggle:before, .nav-container.is-active .nav-toggle:after {
+  box-shadow: none;
+}
+.nav-container.is-active .nav-toggle:before {
+  transform: rotate(-45deg);
+}
+.nav-container.is-active .nav-toggle:after {
+  transform: rotate(45deg);
+}
+.nav-container.is-active .nav-items {
+  transform: translate(55vw, 0);
+}
+.nav-container .nav-toggle {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin: 10px;
+  z-index: 902;
+}
+.nav-container .nav-toggle:hover {
+  cursor: pointer;
+}
+.nav-container .nav-toggle:before, .nav-container .nav-toggle:after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: -30%;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 2px;
+  background: var(--dark-pink);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.nav-container .nav-toggle:before {
+  box-shadow: 0 6.6666666667px 0 0 var(--dark-pink);
+}
+.nav-container .nav-toggle:after {
+  box-shadow: 0 -6.6666666667px 0 0 var(--dark-pink);
+}
+.nav-container .nav-items {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 40vw;
+  z-index: 901;
+  padding: 80px 20px 20px 10px;
+  transition: transform 0.3s ease;
+  transform: translate(100vw, 0);
+  background: #EFEFEF;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 5px 0;
+  align-content: start;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
+}
+.nav-container .nav-items .nav-item {
+  background: #e2e2e2;
+  padding: 10px;
+  transition: background-color 0.3s ease;
+}
+.nav-container .nav-items .nav-item:hover {
+  cursor: pointer;
+  background: #d6d6d6;
+}
+
 .products-second__heading {
   text-align: center;
   font-size: 18px;
