--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -39,6 +39,80 @@ ol {
   }
 }
 
+.nav-container {
+  display: inline-block;
+  max-width: 30px;
+  max-height: 30px;
+  overflow: visible;
+  outline: none;
+}
+.nav-container.is-active .nav-toggle:before, .nav-container.is-active .nav-toggle:after {
+  box-shadow: none;
+}
+.nav-container.is-active .nav-toggle:before {
+  transform: rotate(-45deg);
+}
+.nav-container.is-active .nav-toggle:after {
+  transform: rotate(45deg);
+}
+.nav-container.is-active .nav-items {
+  transform: translate(60vw, 0);
+}
+.nav-container .nav-toggle {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin: 10px;
+  z-index: 902;
+}
+.nav-container .nav-toggle:hover {
+  cursor: pointer;
+}
+.nav-container .nav-toggle:before, .nav-container .nav-toggle:after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: -35%;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 2px;
+  background: var(--dark-pink);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.nav-container .nav-toggle:before {
+  box-shadow: 0 6.6666666667px 0 0 var(--dark-pink);
+}
+.nav-container .nav-toggle:after {
+  box-shadow: 0 -6.6666666667px 0 0 var(--dark-pink);
+}
+.nav-container .nav-items {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 40vw;
+  z-index: 901;
+  padding: 80px 20px 20px 10px;
+  transition: transform 0.3s ease;
+  transform: translate(100vw, 0);
+  background: #EFEFEF;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 5px 0;
+  align-content: start;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
+}
+.nav-container .nav-items .nav-item {
+  background: #e2e2e2;
+  padding: 10px;
+  transition: background-color 0.3s ease;
+}
+.nav-container .nav-items .nav-item:hover {
+  cursor: pointer;
+  background: #d6d6d6;
+}
+
 .hero-header {
   display: flex;
   flex-direction: column;
@@ -187,30 +261,4 @@ ol {
 .product__item {
   padding-left: 20px;
   padding-right: 20px;
-}
-
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
-}
-
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.example .background {
-  height: 240px;
-  background-image: url("../images/demo.jpg");
-  background-size: cover;
-  background-position: center;
 }/*# sourceMappingURL=main.css.map */
