--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,3 +1,52 @@
-
-customer-reviews <br>
-
+<section class="slick">
+  <div class="container slick__container">
+    <h2 class="slick__title visually-hidden" id="customer-reviews">Customer reviews</h2>
+    <ul class="slick__slider">
+      <li class="slick__item">
+        <img
+          class="slick__image"
+          srcset="images/slider/1customer.jpg 1x, images/slider/1customer@2x.jpg 2x"
+          src="images/slider/1customer.jpg"
+          alt="First Customer photo"
+        />
+        <div class="slick__text-thumb">
+          <p class="slick__text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+          </p>
+        </div>
+        <span class="slick__label">Emily, Los Angeles</span>
+      </li>
+      <li class="slick__item">
+        <img
+          class="slick__image"
+          srcset="images/slider/2customer.jpg 1x, images/slider/2customer@2x.jpg 2x"
+          src="images/slider/2customer.jpg"
+          alt="Second Customer photo"
+        />
+        <div class="slick__text-thumb">
+          <p class="slick__text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+          </p>
+        </div>
+        <span class="slick__label">Leslie, Chicago</span>
+      </li>
+      <li class="slick__item">
+        <img
+          class="slick__image"
+          srcset="images/slider/3customer.jpg 1x, images/slider/3customer@2x.jpg 2x"
+          src="images/slider/3customer.jpg"
+          alt="Third Customer photo"
+        />
+        <div class="slick__text-thumb">
+          <p class="slick__text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+          </p>
+        </div>
+        <span class="slick__label">Monica, New York</span>
+      </li>
+    </ul>
+  </div>
+</section>
