--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -106,6 +106,7 @@
 .slick-list {
   overflow: hidden;
 }
+
 .slick-track {
   display: flex;
   align-items: flex-start;
@@ -117,4 +118,17 @@
   justify-content: center;
 }
 
+.slick__slider .slick-dots li {
+  list-style: none;
+}
+
+.slick__slider .slick-dots li:not(:first-child) button {
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: #d9d9d9;
+  border: none;
+  border-radius: 50%;
+  margin-right: 18px;
+}
 
