zmiana buttona w hamburgerze

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -6,7 +6,7 @@
     <div class="nav-toggle"></div>
 
     <div class="nav-items">
-        <button><a href="" class="">Buy now &gt;</a></button>
+        <button class="nav-items__button"><a href="" class="">Buy now &gt;</a></button>
         <li class="nav-item"><a  href="#">Home</a></li>
         <li class="nav-item"><a  href="#">About us</a></li>
         <li class="nav-item"><a  href="#">How it's made?</a></li>
