--- a/src/sass/_hamburger/_hamburger.scss
+++ b/src/sass/_hamburger/_hamburger.scss
@@ -79,7 +79,7 @@ $toggleColor: var(--dark-pink);
         padding: 80px 20px 20px 10px;
         transition: transform .3s ease;
         transform: translate(calc(100vw), 0);
-        background: #EFEFEF;
+        background: #E17992;
         display: grid;
         grid-template-columns: 1fr;
         grid-gap: 5px 0;
@@ -97,4 +97,12 @@ $toggleColor: var(--dark-pink);
             }
         }
     }
+}
+
+.nav-items__button{
+    width: 209px;
+    height: 44px;
+    border-radius: 22px;
+    background-color: #fff;
+    border-color: #fff;
 }
