--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -137,7 +137,7 @@ ol {
   padding: 80px 20px 20px 10px;
   transition: transform 0.3s ease;
   transform: translate(100vw, 0);
-  background: #EFEFEF;
+  background: #E17992;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 5px 0;
@@ -152,6 +152,14 @@ ol {
 .nav-container .nav-items .nav-item:hover {
   cursor: pointer;
   background: #d6d6d6;
+}
+
+.nav-items__button {
+  width: 209px;
+  height: 44px;
+  border-radius: 22px;
+  background-color: #fff;
+  border-color: #fff;
 }
 
 .products-second__heading {
