--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -308,7 +308,7 @@ ol {
   content: "";
   position: absolute;
   bottom: -48px;
-  left: 39%;
+  left: 48%;
   width: 32px;
   height: 4px;
   background-image: url(../images/slider/dots.svg);
@@ -374,4 +374,32 @@ ol {
   border: none;
   border-radius: 50%;
   margin-right: 18px;
+}
+
+.slick__slider .slick-dots li.slick-active button {
+  background-color: #d31342;
+}
+
+.slick__slider .slick-dots li:first-child button {
+  font-size: 0;
+  width: 13px;
+  height: 12px;
+  background-image: url(../images/slider/home2.svg);
+  background-size: cover;
+  background-origin: padding-box;
+  border: none;
+  margin-right: 18px;
+  background-color: transparent;
+}
+
+.slick__slider .slick-dots li.slick-active:first-child button {
+  font-size: 0;
+  width: 13px;
+  height: 12px;
+  background-image: url(../images/slider/home.svg);
+  background-size: cover;
+  background-origin: padding-box;
+  border: none;
+  margin-right: 18px;
+  background-color: transparent;
 }/*# sourceMappingURL=main.css.map */
