--- a/src/sass/general/_general-styles.scss
+++ b/src/sass/general/_general-styles.scss
@@ -7,3 +7,12 @@
 ol {
   list-style-type: none;
 }
+
+body {
+  font-family: 'DM Sans', sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
