zdjecia loda/mobilka/buttony

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -5,14 +5,14 @@
 <div class="nav-container" tabindex="0">
     <div class="nav-toggle"></div>
 
-    <div class="nav-items">
-        <button class="nav-items__button"><a href="" class="">Buy now &gt;</a></button>
-        <li class="nav-item"><a  href="#">Home</a></li>
-        <li class="nav-item"><a  href="#">About us</a></li>
-        <li class="nav-item"><a  href="#">How it's made?</a></li>
-        <li class="nav-item"><a href="#">Our products</a></li>
-        <li class="nav-item"><a href="#">Contact</a></li>
-    </div>
+    <ul class="nav-items">
+        <button class="nav-items__button"><a href="" class="nav-items__buy">Buy now &gt;</a></button>
+        <li class="nav-item"><a class="nav-item__anchor" href="#">Home</a></li>
+        <li class="nav-item"><a  class="nav-item__anchor" href="#">About us</a></li>
+        <li class="nav-item"><a  class="nav-item__anchor" href="#">How it's made?</a></li>
+        <li class="nav-item"><a class="nav-item__anchor" href="#">Our products</a></li>
+        <li class="nav-item"><a class="nav-item__anchor" href="#">Contact</a></li>
+    </ul>
 </div>
 
 
@@ -21,8 +21,12 @@
 <p class="header-topic__p">ICE CREAM <p class="header-topic__p">MADE WITH</p></p>
 <span class="header-topic__span">PASSION</span>
     </section>
-    <section class="hero-header__buttons">
-
+    <section class="hero-header__buttons hero-button">
+<button class="hero-button__product"><a class="hero-button__link" href="#products">Products</a></button>
+<button class="hero-button__how"> <a class="hero-button__link" href="">How it's made?</a></button>
     </section>
-<div class="hero-header__icecream"><img class=header-bottom__img src="../src/images/lód-header.png"></div>
+    <div class="hero-header__icecream"><div class="bg"></div><img class=header-bottom__img src="../src/images/lód-header.png"></div>
+    <!-- <div class="lodkolko">
+<div class="kolko"><div class=overflow><svg class="svg" width="346" height="346"><circle r="170"  cx="170" cy="175" fill="#FFA5BA" class="circle" ></circle></div><div class="hero-header__icecream"><img class=header-bottom__img src="../src/images/lód-header.png"></div> </svg></div>
+</div> -->
 </header>
