--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -1,40 +1,119 @@
-.hero-header{
+.hero-header {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color: var(--product-pink);
     height: 502px;
     width: 100%;
 }
 
-.header-top{
+.header-top {
     display: flex;
     justify-content: space-between;
 }
 
-.header-top__logo{
+.header-top__logo {
     width: 199px;
     height: 50px;
     padding-left: 20px;
     padding-top: 6px;
 }
 
-.hero-header__icecream{
-    position: relative;
+.hero-header__topic {
+    width: 218px;
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
-.header-bottom__img{
+.header-topic__p {
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 30px;
+    color: #fff;
+    position: relative;
+    z-index: 903;
+}
+
+.header-topic__span {
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 45.84px;
+    color: #D41443;
+    position: relative;
+    z-index: 903;
+}
+
+.hero-header__buttons {
+    position: relative;
+    bottom: 140px;
+}
+
+.hero-button__product {
+    border-radius: 20px;
+    width: 61px;
+    height: 24px;
+    border: none;
+    margin-left: 20px;
+    position: relative;
+    z-index: 902;
+}
+
+.hero-button__product:hover {
+    background: #D41443;
+}
+
+.hero-button__how {
+    border-radius: 20px;
+    width: 82px;
+    height: 24px;
+    border: none;
+    position: relative;
+    z-index: 903;
+}
+
+.hero-button__how:hover {
+    background: #D41443;
+}
+
+.hero-button__link {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 10px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #D41443;
+    width: 100%;
+    height: 100%;
+}
+
+.hero-button__link:hover {
+    color: #fff;
+}
+
+.hero-header__icecream {
+    position: absolute;
+    background-image: url("/images/elipse-mobile.png");
+    background-size: 344px;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 502px;
+    top: 100px;
+    left: 20%;
+}
+
+
+.header-bottom__img {
     width: 171px;
     height: 410px;
-    position: absolute;
-    top: -37px;
-    left: 35%;
-    z-index: 900;
-}
-
-.header-topic__p{
-    color: white;
-    font-size: 26px;
-    font-weight: 400;
-    line-height: 29.77px;
-    letter-spacing: 4%;
+    margin-left: 50px;
+    margin-top: -8px;
 }
