--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -7,6 +7,17 @@
     width: 100%;
 }
 
+@media screen and(min-width: 480px){
+.hero-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--product-pink);
+    height: 399px;
+    width: 100%;
+}
+}
+
 .header-top {
     display: flex;
     justify-content: space-between;
@@ -18,6 +29,14 @@
     padding-left: 20px;
     padding-top: 6px;
 }
+
+@media screen and(min-width: 480px) {.header-top__logo {
+        width: 199px;
+        height: 50px;
+        padding-left: 20px;
+        padding-top: 36px;
+    }}
+    
 
 .hero-header__topic {
     width: 218px;
@@ -49,7 +68,14 @@
 
 .hero-header__buttons {
     position: relative;
-    bottom: 140px;
+    bottom: 110px;
+}
+
+@media screen and(min-width: 480px) {
+    .hero-header__buttons {
+            position: relative;
+            bottom: 65px;
+        }
 }
 
 .hero-button__product {
@@ -99,21 +125,68 @@
     color: #fff;
 }
 
-.hero-header__icecream {
+.hero-header__icediv {
     position: absolute;
     background-image: url("/images/elipse-mobile.png");
     background-size: 344px;
     background-repeat: no-repeat;
     width: 100vw;
-    height: 502px;
     top: 100px;
-    left: 20%;
+    left: 30vw;
+}
+@media screen and(min-width: 480px) {}
+@media screen and(min-width: 480px) {
+    .hero-header__icediv {
+            position: absolute;
+            background-image: url("/images/elipse-mobile.png");
+            background-size: 344px;
+            background-repeat: no-repeat;
+            width: 100vw;
+            top: 30px;
+            left: 30vw;
+        }
 }
 
-
-.header-bottom__img {
+.header-bottom__icecream {
     width: 171px;
     height: 410px;
     margin-left: 50px;
     margin-top: -8px;
+}
+
+@media screen and(min-width: 480px) {
+    .header-bottom__icecream {
+            width: 143px;
+            height: 336px;
+            margin-left: 70px;
+            margin-top: 32px;
+        }
+}
+
+.hero-header__milkdiv {
+    display: none;
+}
+
+@media screen and(min-width: 480px){
+.hero-header__milkdiv{
+    display: inline-block;
+    position: absolute;
+    z-index: 920;
+    left: 2%;
+    top: 260px;
+}
+}
+
+.hero-header__tastydiv {
+    display: none;
+}
+
+@media screen and(min-width: 480px) {
+    .hero-header__tastydiv {
+        display: inline-block;
+        position: absolute;
+        z-index: 920;
+        right: 2%;
+        top: 265px;
+    }
 }
