--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -15,7 +15,7 @@
             </ul>
         </div>
     <!-- hamburger menu -->
-
+    <button class="header-top__buy"><a class="header-top__buylink" href="#">Buy now &gt;</a></button>
 <!-- topic -->
     </section>
     <section class="hero-header__topic header-topic">
