--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -36,7 +36,38 @@
         padding-left: 20px;
         padding-top: 36px;
     }}
-    
+
+.header-top__buy {
+    display: none;
+}
+
+@media screen and(min-width: 480px){
+    .header-top__buy {
+            display: inline-block;
+                width: 209px;
+                    height: 44px;
+                    border-radius: 22px;
+                    background-color: #fff;
+                    border: none;
+                    margin: 0 auto;
+        }
+}
+
+.header-top__buylink{
+    display: none;
+}
+
+@media screen and(min-width: 480px) {.header-top__buylink {
+        display: inline-block;
+            color: #D41443;
+                font-family: 'Titan One';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 26px;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                text-decoration: none;
+    }}
 
 .hero-header__topic {
     width: 218px;
