--- a/src/sass/_hamburger/_hamburger.scss
+++ b/src/sass/_hamburger/_hamburger.scss
@@ -128,6 +128,12 @@ $toggleColor: #fff;
         }
     }
 }
+@media screen and(min-width: 480px){
+    .nav-container .nav-toggle{
+        position: absolute;
+        right: 0;
+    }
+}
 
 .nav-items__button{
     width: 209px;
