--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -7,15 +7,15 @@
     width: 100%;
 }
 
-@media screen and(min-width: 480px){
-.hero-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: var(--product-pink);
-    height: 399px;
-    width: 100%;
-}
+@media screen and(min-width: 480px) {
+    .hero-header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: var(--product-pink);
+        height: 399px;
+        width: 100%;
+    }
 }
 
 .header-top {
@@ -30,44 +30,48 @@
     padding-top: 6px;
 }
 
-@media screen and(min-width: 480px) {.header-top__logo {
+@media screen and(min-width: 480px) {
+    .header-top__logo {
         width: 199px;
         height: 50px;
         padding-left: 20px;
         padding-top: 36px;
-    }}
+    }
+}
 
 .header-top__buy {
     display: none;
 }
 
-@media screen and(min-width: 480px){
+@media screen and(min-width: 480px) {
     .header-top__buy {
-            display: inline-block;
-                width: 209px;
-                    height: 44px;
-                    border-radius: 22px;
-                    background-color: #fff;
-                    border: none;
-                    margin: 0 auto;
-        }
+        display: inline-block;
+        width: 209px;
+        height: 44px;
+        border-radius: 22px;
+        background-color: #fff;
+        border: none;
+        margin: 0 auto;
+    }
 }
 
-.header-top__buylink{
+.header-top__buylink {
     display: none;
 }
 
-@media screen and(min-width: 480px) {.header-top__buylink {
+@media screen and(min-width: 480px) {
+    .header-top__buylink {
         display: inline-block;
-            color: #D41443;
-                font-family: 'Titan One';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 26px;
-                line-height: 30px;
-                letter-spacing: 0.04em;
-                text-decoration: none;
-    }}
+        color: #D41443;
+        font-family: 'Titan One';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 26px;
+        line-height: 30px;
+        letter-spacing: 0.04em;
+        text-decoration: none;
+    }
+}
 
 .hero-header__topic {
     width: 218px;
@@ -104,9 +108,9 @@
 
 @media screen and(min-width: 480px) {
     .hero-header__buttons {
-            position: relative;
-            bottom: 65px;
-        }
+        position: relative;
+        bottom: 65px;
+    }
 }
 
 .hero-button__product {
@@ -165,17 +169,19 @@
     top: 100px;
     left: 30vw;
 }
+
 @media screen and(min-width: 480px) {}
+
 @media screen and(min-width: 480px) {
     .hero-header__icediv {
-            position: absolute;
-            background-image: url("/images/elipse-mobile.png");
-            background-size: 344px;
-            background-repeat: no-repeat;
-            width: 100vw;
-            top: 30px;
-            left: 30vw;
-        }
+        position: absolute;
+        background-image: url("/images/elipse-mobile.png");
+        background-size: 344px;
+        background-repeat: no-repeat;
+        width: 100vw;
+        top: 30px;
+        left: 30vw;
+    }
 }
 
 .header-bottom__icecream {
@@ -187,25 +193,25 @@
 
 @media screen and(min-width: 480px) {
     .header-bottom__icecream {
-            width: 143px;
-            height: 336px;
-            margin-left: 70px;
-            margin-top: 32px;
-        }
+        width: 143px;
+        height: 336px;
+        margin-left: 70px;
+        margin-top: 32px;
+    }
 }
 
 .hero-header__milkdiv {
     display: none;
 }
 
-@media screen and(min-width: 480px){
-.hero-header__milkdiv{
-    display: inline-block;
-    position: absolute;
-    z-index: 920;
-    left: 2%;
-    top: 260px;
-}
+@media screen and(min-width: 480px) {
+    .hero-header__milkdiv {
+        display: inline-block;
+        position: absolute;
+        z-index: 920;
+        left: 2%;
+        top: 260px;
+    }
 }
 
 .hero-header__tastydiv {
